expand collapse buttons workinggit add .git add .

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
-.name {
+#name {
     color: pink;
     text-align:center;
 }
 
-.software-engineer {
+.below-name {
     color: cyan;
     text-align: center;
+}
+
+.collapse {
+    display: none;
 }
