--- a/styles.css
+++ b/styles.css
@@ -47,20 +47,46 @@ h3 {
     border: solid aquamarine;
     padding: 20px;
 }
-
-.inside-popup {
-    display: none;
-    overflow: auto;
-    z-index: 1;
+#open-button {
+    color: black;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+    position: relative;
 }
 
-.close-button {
+ #inside {
+    display: none;
+    position: fixed;
+    border: white;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
+    overflow:auto;
+}
+
+#close {
+    color: white;
+    width: 80%;
+    padding:  10px;
+    position: relative;
+    z-index: 2;
+
+}
+#close-button {
+    position: absolute;
     float: right;
+    color: white;
+    font-size: 20px;
+
 }
 
 .close-button:hover {
-    color: yellow;
+    color: white;
 }
+
+
 
 .column-buttons {
     text-align: center;
