--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,12 @@ h3 {
 
 #resume {
     color: cyan;
+    cursor:pointer;
 }
 
 #portfolio {
     color: cyan;
+    cursor: pointer;
 }
 
 .collapse {
@@ -47,46 +49,61 @@ h3 {
     border: solid aquamarine;
     padding: 20px;
 }
+
 #open-button {
-    color: black;
+    color: green;
     margin: 10px 0;
-    border: none;
-    border-radius: 5px;
     position: relative;
 }
 
  #inside {
     display: none;
-    position: fixed;
-    border: white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
     z-index: 100;
+    width: 500px;
+    max-width: 100%;
+    height: 400px;
+    max-height: 100%;
+    background-color: aquamarine;
+    margin: auto;
+    border: 10px solid white;
+    filter: drop-shadow(40px 40px 40px pink);
+}
+
+#inside-modal-bio {
+    text-align: center;
+    color: black;
+    position: absolute;
     width: 100%;
     height: 100%;
-    background-color: aqua;
-    overflow:auto;
+    z-index: 200;
 }
 
 #close {
     color: white;
     width: 80%;
-    padding:  10px;
     position: relative;
-    z-index: 2;
+    z-index: 300;
 
 }
+
 #close-button {
+    float: left;
+    color: black;
+    font-size: 15px;
     position: absolute;
-    float: right;
-    color: white;
-    font-size: 20px;
-
+    padding: 10px;
+    width: 45px;
+    border: 1px solid grey;
+    text-align: center;
+    margin: 5px 5px 5px 5px;
+    box-shadow: 5px 5px grey;
+    cursor:pointer;
 }
-
-.close-button:hover {
-    color: white;
-}
-
-
 
 .column-buttons {
     text-align: center;
