--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h3 {
     font-family: 'quicksand', 'sans-serif';
 }
 
+/* ----------Accordion----------- */
 #resume {
     color: cyan;
     cursor: pointer;
@@ -49,6 +50,7 @@ h3 {
 .collapse2 {
     display: none;
 }
+/* -------End of accordion------ */
 
 .div-for-photo {
     text-align: center;
@@ -56,12 +58,15 @@ h3 {
     padding: 20px;
 }
 
+/* --------Modal--------- */
 #open-button {
-    color: green;
+    color: black;
     margin: 10px 0;
     position: relative;
     font-family: 'quicksand', 'sans-serif';
     cursor: pointer;
+    background-color: aquamarine;
+    border-radius: 20px;
 }
 
  #inside {
@@ -112,12 +117,14 @@ h3 {
     box-shadow: 5px 5px grey;
     cursor:pointer;
 }
+/* -------------------------- */
 
 .column-buttons {
     text-align: center;
     margin: 10px;
 }
 
+/* -----Mouseover/out event creating hover over buttons---- */
 .hover-buttons {
     text-align: center;
     padding: 20px;
