--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 img {
-    height: 350px;
-    width: 500px;
+    height: 40vh;
+    width: 60vh;
     max-width: 100%;
     max-height: 100%;
 }
@@ -11,11 +11,13 @@ body {
 
 p {
     color: pink;
+    text-align: center;
 }
 
 h3 {
     color: aquamarine;
     font-family: 'quicksand', 'sans-serif';
+    text-align: center;
 }
 
 #name {
@@ -28,6 +30,13 @@ h3 {
     color: cyan;
     text-align: center;
     font-family: 'quicksand', 'sans-serif';
+}
+
+.homepage {
+    font-family: 'dancing script', 'sans-serif';
+    font-size: 30px;
+    cursor: pointer;
+    color: pink;
 }
 
 /* ----------Accordion----------- */
@@ -45,27 +54,37 @@ h3 {
     font-family: 'quicksand', 'sans-serif';
 }
 
-.collapse {
+#contact {
     text-align: center;
+    color: cyan;
+    cursor: pointer;
+    font-family: 'quicksand', 'sans-serif';
+}
+
+.collapse {
     display: none;
 }
 
 .collapse2 {
     display: none;
-    text-align: center;
+}
+
+.collapse3 {
+    display: none;
 }
 /* -------End of accordion------ */
 
 .div-for-photo {
     text-align: center;
     border: solid aquamarine;
-    padding: 30px;
+    padding: 20px;
     border-radius: 50px;
     border-style: dotted;
     border-width: thick;
 }
 
 /* --------Modal--------- */
+
 .div-for-button {
     text-align: center;
 }
@@ -101,15 +120,26 @@ h3 {
 #inside-modal-bio {
     text-align: center;
     color: black;
+    font-family: 'quicksand', 'sans-serif';
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 200;
-    margin-top: 70px;
+    margin-top: 20px;
+}
+
+#modal-pic {
+   width: 50vh;
+   height: 30vh;
+   display: block;
+   margin-top: 100px;
+   margin-left:auto;
+   margin-right:auto;
+   outline: dotted;
+   margin-bottom: 10px;
 }
 
 #close {
-    color: white;
     width: 80%;
     position: relative;
     z-index: 300;
@@ -130,10 +160,6 @@ h3 {
 }
 /* -------------------------- */
 
-.column-buttons {
-    text-align: center;
-    margin: 15px;
-}
 
 /* -----Mouseover/out event creating hover over buttons---- */
 .hover-buttons {
