--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,35 @@ h3 {
     font-family: 'quicksand', 'sans-serif';
 }
 
+.paintings {
+    display: inline-block;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+
+#boof {
+    margin: auto;
+    height: 40vh;
+    width: 35vh;
+}
+
+
+#toucan {
+    margin: auto;
+    height: 40vh;
+    width: 40vh;
+}
+
+#hummingbird {
+    margin: auto;
+    height: 40vh;
+    width: 40vh;
+
+}
+
 #contact {
     text-align: center;
     color: cyan;
@@ -129,14 +158,14 @@ h3 {
 }
 
 #modal-pic {
-   width: 50vh;
-   height: 30vh;
+   width: 40vh;
+   height: 27vh;
    display: block;
-   margin-top: 100px;
+   margin-top: 70px;
    margin-left:auto;
    margin-right:auto;
    outline: dotted;
-   margin-bottom: 10px;
+   margin-bottom: 20px;
 }
 
 #close {
