--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ img {
 
 body {
     background-color: black;
+
 }
+
 
 p {
     color: pink;
@@ -30,13 +32,6 @@ h3 {
     color: cyan;
     text-align: center;
     font-family: 'quicksand', 'sans-serif';
-}
-
-.homepage {
-    font-family: 'dancing script', 'sans-serif';
-    font-size: 30px;
-    cursor: pointer;
-    color: pink;
 }
 
 /* ----------Accordion----------- */
@@ -214,4 +209,17 @@ h3 {
     text-decoration: none;
     padding: 10px;
     font-family: 'quicksand', 'sans-serif';
+}
+
+/* home button that takes you back to the top of the page */
+
+.homepage {
+    font-family: 'dancing script', 'sans-serif';
+    font-size: 30px;
+    cursor: pointer;
+    text-align: center;
+}
+
+#home {
+    color: pink;
 }
